--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Test Page plurch</title>
 </head>
 <body>
-Test Page
+  <p>Test Page</p>
+  <a href='/create-react/'>create-react test</a>
 </body>
 </html>
