--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-  <title>Test Page plurch</title>
+  <title>plurch.org</title>
 </head>
 <body>
-  <p>Test Page</p>
-  <a href='/create-react/'>create-react test</a>
+  <p>plurch.org</p>
 </body>
 </html>
